--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0"
 hex = "0.4"
 secp256k1 = { version = "0.28", features = ["recovery"] }
 alloy-rlp = {version = "0.3.10"}
+clap = { version = "4.5.26", features = ["derive"] }
